--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://129.151.118.163:3306/maquinaria
+spring.datasource.url=jdbc:mysql://localhost:3306/maquinaria
 spring.datasource.username=root
 spring.datasource.password=Iwikhtqy2005#
 spring.jpa.hibernate.ddl-auto=create-drop
